# cv

./: .gitignore  Makefile  README.md  pyproject.toml
dev/: links.jsonl  populate.sh  projects.jsonl
fh_soren_cv/: data.py  infrastructure.py  run.py
